--- a/packages/chart-react-vis/src/chart-react-vis.scss
+++ b/packages/chart-react-vis/src/chart-react-vis.scss
@@ -1,5 +1,10 @@
 .chartRow.react-vis:not(.noCharts) {
-  height: 400px;
+  @media (max-width: 768px) {
+    .chartRow--donut {
+      justify-self: initial;
+    }
+  }
+
   .chartRow--line, .chartRow--donut {
     align-self: initial;
   }
